  so recycling cleanup is done first, thus avoiding inconsistencies
  upon startup.

- The @teleport command can now be used on exits. Players with the
  Open_Anywhere power can now drop or @teleport exits to any location.

- Specifying an object to @trigger is now optional; if no object is
  specified, the object defaults to 'me'.

- Attributes containing a $command or ^monitor can now be @trigger'd 
  directly, as well as used as @a-actions; everything before the first
  un-escaped ':' is ignored.  Based on an idea from PennMUSH.

-----------------------------------------------------------------------------

CHANGES TO FUNCTIONS

- Multi-character input and output delimiters are now supported for
  most functions.

- There are additional global registers, %qa-%qz (based on an idea from
  PennMUSH). Furthermore, arbitrarily-named global registers can be defined
  on the fly (up to the conf parameter register_limit, per action list).
  setq() can now take multiple name-value pairs.

- The caller of a function can now be tracked via %@; it's normally equal
  to the enactor, except where u()-type functions, including objeval()
  and @functions, are called. This provides better security-checking
  capabilities. Based on an idea from PennMUSH.

- The %m substitution can now be used for last command (MUX2 compatibility;
  %c is the usual substitution).

- Brackets are no longer required around eval-locks, hooks, or @exitto code.

- The *<player> syntax is supported in many more places.

- There is a more informative error message when a function is given the
  wrong number of arguments. Idea from Philip Mak.

- Extended regular expression syntax from Perl 5 is now supported.
  This is based on the PCRE library, as modified by the PennMUSH team.

- New regular expression functions: regedit(), regediti(), regeditall(),
  regeditalli(), regrab(), regrabi(), regraball(), regraballi(),
  regrep(), regrepi(), regmatchi(), regparsei().
