@@ -24,6 +24,13 @@ Release history:
 			TinyMUSH 3.1 Beta History
 =============================================================================
 
+08/xx/200: Beta 7
+
+- Feature: @verb now takes a no_name switch, which prevents the actor's
+  name from being prepended to the default o-message.
+
+-----------------------------------------------------------------------------
+
 08/14/2002: Beta 6
 
 - Feature: Global registers can now be named arbitrary things, with the
