@@ -3265,8 +3265,8 @@ See also: JUMP_OK, FIXED, home, @lock
   See also: @chown, @lock, ATTRIBUTE OWNERSHIP.
 
 & @verb
-  Command: @verb[/<switch>] <victim>=<actor>,<what>,<def>,
-                                     <owhat>,<odef>,<awhat>,<args>
+  Command: @verb[/<switches>] <victim>=<actor>,<what>,<def>,
+                                       <owhat>,<odef>,<awhat>,<args>
  
   This command provides a way to do user-defined verbs with associated
   @attr/@oattr/@aattr groups. Invoking it does the following:
@@ -3291,26 +3291,26 @@ See also: JUMP_OK, FIXED, home, @lock
 { 'help @verb2' for more }
 & @verb2
   
-    victim - The object that is searched for attributes, and which runs the
-             <awhat> attribute if it is found.
-    actor  - The object that 'did' the verb, this is the value for %#/%n/etc
-             in substitutions, and this object's name is included in the
-             message to others in the same location.
-    what   - The name of the attribute containing the message to be delivered
-             to the actor.
-    whatd  - The message to deliver to the actor if the victim does not have a
-             <what> attribute, or if it cannot be read.
-    owhat  - The name of the attribute containing the message (prefixed by the
-             actor's name, unless the no_name attribute flag is set on that
-             attribute) that is sent to everyone in the room with the actor.
-    owhatd - The message (prefixed by the actor's name) to deliver to others
-             in the room with the actor if the victim does not have an <owhat>
-             attribute, or it cannot be read.
-    awhat  - The name of the attribute that is to be executed by the victim.
-    args   - The comma-separated arguments to be passed for substitution
-             (%0-%9).  If there is more than one argument, enclose all the
-             arguments within curly braces.  Any argument that contains an
-             embedded comma needs to be enclosed in curly braces as well.
+  victim - The object that is searched for attributes, and which runs the
+           <awhat> attribute if it is found.
+  actor  - The object that 'did' the verb, this is the value for %#/%n/etc
+           in substitutions, and this object's name is included in the
+           message to others in the same location.
+  what   - The name of the attribute containing the message to be delivered
+           to the actor.
+  whatd  - The message to deliver to the actor if the victim does not have a
+           <what> attribute, or if it cannot be read.
+  owhat  - The name of the attribute containing the message (prefixed by the
+           actor's name, unless the no_name attribute flag is set on that
+           attribute) that is sent to everyone in the room with the actor.
+  owhatd - The message to deliver to others in the room with the actor if the
+           victim does not have an <owhat> attribute, or it cannot be read.
+           Prefixed by the actor's name unless /no_name switch is specified.
+  awhat  - The name of the attribute that is to be executed by the victim.
+  args   - The comma-separated arguments to be passed for substitution
+           (%0-%9).  If there is more than one argument, enclose all the
+           arguments within curly braces.  Any argument that contains an
+           embedded comma needs to be enclosed in curly braces as well.
  
 { 'help @verb3' for more }
 & @verb3
@@ -3340,8 +3340,8 @@ See also: JUMP_OK, FIXED, home, @lock
 
 & @verb4
  
-  @verb also takes three additional switches:
-
+  In addition to /now and /no_name,  @verb takes three additional switches:
+ 
     /move    - Treat this message as if it were movement, for the purpose
                of checking PRESENCE objects.
  
@@ -14548,6 +14548,9 @@ Continued in 'help 3.1 commands6'.
  
 - Specifying an object to @trigger is now optional; if no object is
   specified, the object defaults to 'me'.
+ 
+- @verb now takes a no_name switch, which prevents the actor's name from
+  being prepended to the default o-message.
  
 - Attributes containing a $command or ^monitor can now be @trigger'd 
   directly, as well as used as @a-actions; everything before the first
